# AdventOfCode23

./: .gitignore  AdventOfCode23.code-workspace  README.md  pom.xml
aoc23-java/: pom.xml
aoc23-java/src/test/java/: TestCalibrator.java  TestDay4.java  TestEngineSchema.java  TestGame.java
aoc23-java/src/test/resources/: day3-endPos.txt  day3-fails.txt  test-day1-task2.txt  test-day3.txt
aoc23-python/: README.md  pyproject.toml
aoc23-python/src/: main.py
aoc23-python/src/aoc23/day11/: __main__.py  cosmic_expansion.py  solver.py
aoc23-python/src/aoc23/day5/: __main__.py  solver.py
aoc23-python/src/aoc23/day6/: __main__.py  solver.py
aoc23-python/src/aoc23/day7/: __main__.py  camelcard.py  solver.py
aoc23-python/src/aoc23/day8/: __main__.py  solver.py
aoc23-python/src/aoc23/day9/: __main__.py  solver.py
aoc23-python/src/aoc23/utils/: solver.py
aoc23-python/src/day5/: mapper.py  solver.py
aoc23-python/src/day6/: solver.py
aoc23-python/src/day7/: camelcard.py  solver.py
aoc23-python/src/day8/: haunted_wasteland.py  solver.py
aoc23-python/src/day9/: solver.py
aoc23-python/src/utils/: solver.py
aoc23-python/tests/: test_day11.py  test_day9.py
src/main/java/day1/: Calibrator.java  Day1Solver.java
src/main/java/day2/: Color.java  Day2Solver.java  Game.java
src/main/java/day3/: Day3Solver.java  PartNumber.java  SearchGrid.java
src/main/java/day4/: Card.java  Day4Solver.java
src/test/java/: TestCalibrator.java  TestEngineSchema.java  TestGame.java
src/test/resources/: day1-task2.txt  day3-own-checks.txt
(+19 files in other folders)
